# lexStamp

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.stellar/contract-ids/: document_timestamp.json
.stellar/identity/: my-testnet-account.toml
contracts/.stellar/identity/: user.toml
contracts/document_timestamp/: Cargo.toml
contracts/document_timestamp/src/: lib.rs
src/: App.tsx
src/components/: Layout.tsx  LoginPage.tsx  WalletConnectionPage.tsx
src/contexts/: AuthContext.tsx
src/contracts/: document_timestamp.rs
src/pages/: DocumentViewer.tsx  Home.tsx  IncomingPage.tsx  UploadPage.tsx
src/store/: contractId.ts  keyId.ts
src/types/: index.ts
src/utils/: crypto.ts  ipfs.ts  passkey-kit.ts  stellar.ts
