[package]
name = "document-timestamp"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "20.5.0", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
soroban-env-common = { version = "20.5.0", default-features = false }